python/testData/quickFixes/PyAddImportQuickFixTest/orderingOfNamesInFromImportBeginning/main.py
from lib import b, c

print(<error descr="Unresolved reference 'a'"><caret>a</error>, b, c)
